{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 188,
  "lineage": "922ac473-733a-7910-a099-151a0c475cd9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Web_Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-094bbd9e922dc515d",
            "arn": "arn:aws:ec2:ap-southeast-1:692530166570:instance/i-003d57670f0183281",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-003d57670f0183281",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pbl4",
            "maintenance_options": [
              {
                "auto_recovery": "disabled"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-071f1ccf54c93fb74",
            "private_dns": "ip-10-0-1-56.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.56",
            "public_dns": "ec2-54-179-245-199.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.179.245.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ca1d6d10ac058987",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-05bbb3953caf2b4b0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0603d055313266f66",
            "tags": {
              "Name": "webserver"
            },
            "tags_all": {
              "Name": "webserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05bbb3953caf2b4b0"
            ]
          },
          "dependencies": [
            "aws_security_group.EC2SG",
            "aws_subnet.MyVPC_subnet_public_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "MyVPC_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:692530166570:internet-gateway/igw-0287a7f909d8e2281",
            "id": "igw-0287a7f909d8e2281",
            "owner_id": "692530166570",
            "tags": {
              "Name": "My New IGW"
            },
            "tags_all": {
              "Name": "My New IGW"
            },
            "vpc_id": "vpc-076d59f4543b81966"
          },
          "dependencies": [
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "MyVpc_route_table_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:692530166570:route-table/rtb-0726081e4798901f2",
            "id": "rtb-0726081e4798901f2",
            "owner_id": "692530166570",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private route table"
            },
            "tags_all": {
              "Name": "Private route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-076d59f4543b81966"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "MyVpc_route_table_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:692530166570:route-table/rtb-0fc4673867149178e",
            "id": "rtb-0fc4673867149178e",
            "owner_id": "692530166570",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0287a7f909d8e2281",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public route Table"
            },
            "tags_all": {
              "Name": "Public route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-076d59f4543b81966"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.MyVPC_internet_gateway",
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053fbf5f2db7636bf",
            "route_table_id": "rtb-0fc4673867149178e",
            "subnet_id": "subnet-0603d055313266f66"
          },
          "dependencies": [
            "aws_internet_gateway.MyVPC_internet_gateway",
            "aws_route_table.MyVpc_route_table_public",
            "aws_subnet.MyVPC_subnet_public_1",
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3427f836597c8d8",
            "route_table_id": "rtb-0fc4673867149178e",
            "subnet_id": "subnet-03febf533c87b33a8"
          },
          "dependencies": [
            "aws_internet_gateway.MyVPC_internet_gateway",
            "aws_route_table.MyVpc_route_table_public",
            "aws_subnet.MyVPC_subnet_public_2",
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "EC2SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:692530166570:security-group/sg-05bbb3953caf2b4b0",
            "description": "ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05bbb3953caf2b4b0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "EC2SG",
            "name_prefix": "",
            "owner_id": "692530166570",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-076d59f4543b81966"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dbsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:692530166570:security-group/sg-09597acd45fb2fb67",
            "description": "MYSQL Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09597acd45fb2fb67",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dbsg",
            "name_prefix": "",
            "owner_id": "692530166570",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-076d59f4543b81966"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "MyVPC_subnet_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:692530166570:subnet/subnet-056e22b890ee4bd34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056e22b890ee4bd34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "692530166570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private 1"
            },
            "tags_all": {
              "Name": "Private 1"
            },
            "vpc_id": "vpc-076d59f4543b81966"
          },
          "dependencies": [
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "MyVPC_subnet_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:692530166570:subnet/subnet-0d87cd787e5dfec44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d87cd787e5dfec44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "692530166570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private 2"
            },
            "tags_all": {
              "Name": "Private 2"
            },
            "vpc_id": "vpc-076d59f4543b81966"
          },
          "dependencies": [
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "MyVPC_subnet_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:692530166570:subnet/subnet-0603d055313266f66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0603d055313266f66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "692530166570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public 1"
            },
            "tags_all": {
              "Name": "Public 1"
            },
            "vpc_id": "vpc-076d59f4543b81966"
          },
          "dependencies": [
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "MyVPC_subnet_public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:692530166570:subnet/subnet-03febf533c87b33a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03febf533c87b33a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "692530166570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public 2"
            },
            "tags_all": {
              "Name": "Public 2"
            },
            "vpc_id": "vpc-076d59f4543b81966"
          },
          "dependencies": [
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "MyVpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:692530166570:vpc/vpc-076d59f4543b81966",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0539da67b0ce390f4",
            "default_route_table_id": "rtb-09171d04b6e31918b",
            "default_security_group_id": "sg-0a05963517e7ee274",
            "dhcp_options_id": "dopt-0d5d6e045d79fa9ea",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-076d59f4543b81966",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09171d04b6e31918b",
            "owner_id": "692530166570",
            "tags": {
              "Name": "MyVpc"
            },
            "tags_all": {
              "Name": "MyVpc"
            }
          }
        }
      ]
    }
  ]
}